<resources>
    <string name="app_name">Infinity News</string>
    <string name="app_logo">App Logo</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="home">Home</string>
    <string name="tech">Tech</string>
    <string name="general">General</string>
    <string name="politics">Politics</string>
    <string name="sports">Sports</string>
    <string name="news_categories">News Categories</string>
    <string name="logo">App Logo</string>
    <string name="search_latest_news">search latest news</string>
    <string name="latest_news">Latest news</string>
    <string name="categories">Categories</string>
    <string name="bookmarks1">Bookmarks</string>
    <string name="login_into_your_account">Login into your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="or_login_with">Or login with</string>
    <string name="google">Google</string>
    <string name="not_register_yet_create_account">Not register yet ? Create Account</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="email2">Email</string>
    <string name="language_preference">Language preference</string>
    <string name="favorite_news_category">Favorite news category</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="tech2">Tech</string>
    <string name="general2">General</string>
    <string name="politics2">Politics</string>
    <string name="sports2">Sports</string>
    <string name="settings2">Settings</string>
    <string name="about_us">About us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="create_account">Create account</string>
    <string name="email3">Email</string>
    <string name="password2">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="google2">Google</string>
    <string name="news_title">News Title</string>
</resources>